@@ -202,6 +202,7 @@ typedef enum {
     GRETL_TEST_PANEL_TIMEDUM,
     GRETL_TEST_HET_1,
     GRETL_TEST_BP,
+    GRETL_TEST_CHOWDUM,
     GRETL_TEST_MAX
 } ModelTestType;
 
